# BallotLab

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE.md  LICENSEv1  Pipfile  README-01.md  README.md  VERSIONS.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python3.8-app.yml
assets/data/: BallotStudio_16_Edits.JSON  BallotStudio_7_Formatted.JSON  nist_sample_election_report.xml
assets/schema/election/: __init__.py
docs/: EAC_Effective_Election_Design.txt
samplecode/: basedoctest.py  ellipse.py  form_reader.py  form_table.py  import_contest.py  native_font_list.py  nisty.py  pres_vice_pres.txt  sample_oval_in_table.py  simple_radios.py  truetype_font_demo.py  truetype_font_finder.py
src/ballotlab/: ballot_demo.py  contest.py  data.py  election_model_16.py  files.py  images.py
src/electos/ballotmaker/: __main__.py  cli.py  constants.py  demo.py  demo_ballots.py  demo_election_data.py  election_data.py  make_ballots.py  read_edf.py  validate_edf.py
src/electos/ballotmaker/ballots/: ballot_layout.py  build_ballots.py  contest.py  contest_data.py  contest_layout.py  demo_ballot.py  files.py  header.py  images.py  instructions.py  page_layout.py
src/electos/ballotmaker/data/: edf-to-ballot-data.py  extractor.py  models.py
src/electos/ballotmaker/demo_data/: ballot_lab_data.py  bedrock_data.json  dict_maker.py  downtown_data.json  gp_units.py  offices.py  party.py  september_demo_data.json  spaceport_data.json  spacetown_data.json  spacetown_data.py
src/electos/ballotmaker/scripts/: README.md  (+1 more)
src/electos/versadm/: ballot_demo.py
tests/: test_cli.py  test_demo.py  test_election_data.py  test_make_ballots.py  test_read_edf.py  test_validate_edf.py  x_test_validate_edf.py
tests/models/: test_ballot_choices.py  test_ballot_contests.py  test_ballot_style.py  test_candidate_choices.py  test_candidate_contests.py  test_elections.py  test_parties.py
(+14 files in other folders)
