[tool.poetry]
name = "BallotMaker"
version = "0.1.3"
description = "Generate PDF ballots from EDF file; part of ElectOS Versa."
authors = ["Neil Johnson <neil@cadent.com>"]
license = "OSET Public License"
packages = [{ include = "electos/ballotmaker", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
reportlab = "^3.6.9"
"pdfminer.six" = "^20220506"
Pillow = "^9.1.1"
typer = "^0.4.1"

"electos.nist-datamodels" = { git = "https://github.com/ion-oset/nist-data-models.git", rev = "python/model-index" }

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.950"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
ballotmaker = 'electos.ballotmaker.cli:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
