[metadata]
name = BallotLab
version = 0.0.2
license = OSET Public License
description = Test the generation PDF ballots from Election Definition Files
long_description = file: README.md
author = Neil Johnson
author_email = neil@cadent.com
classifiers=
   Development Status :: 1 - Planning
   Environment :: Console
   Intended Audience :: Developers
   License :: OSI Approved :: MIT License
   Natural Language :: English
   Programming Language :: Python :: 3 
   Topic :: Printing
   
[options]
packages = find:
package_dir =
    =ballotlab
include_package_data = True
install_requires =
   reportlab
   pillow

[options.packages.find]
where=ballotlab

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[mypy]
files=BallotLab,test
ignore_missing_imports=true

[tool:pytest]
testpaths=test